--- a/app.json
+++ b/app.json
@@ -1,8 +1,8 @@
 {
-  "name": "Start on Heroku: Python",
-  "description": "A barebones Python app, which can easily be deployed to Heroku.",
+  "name": "Photobomb",
+  "description": "A webapp to manipulate images.",
   "image": "heroku/python",
-  "repository": "https://github.com/heroku/python-getting-started",
+  "repository": "https://github.com/antevens/photobomb.git",
   "keywords": ["python", "django" ],
   "addons": [ "heroku-postgresql" ]
 }
